<resources>
    <string name="app_name">MidTerm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>

    <string name="CreateNewAccount">Create New Account</string>
    <string name="Name">Name</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="LogOut">Log Out</string>
    <string name="post">Post</string>
    <string name="comment">Comments</string>
    <string name="comment_single">Comment</string>

    <string name="EmailError">Email Field Cannot be Empty</string>
    <string name="NameError">Name Field Cannot be Empty</string>
    <string name="PasswordError">Password Field Cannot be Empty</string>
    <string name="CommonError">Error Occurred!!!</string>
    <string name="IncorrectInput">Email or Password is incorrect!!!</string>

    <string name="ErrorContext">must implement Interface</string>
    <string name="Sure">Are You Sure</string>
    <string name="SureMessage">Are you sure you want to cancel?</string>
    <string name="SureMessageSubmit">Are you sure you want to Submit these changes?</string>
    <string name="Cancel_Toast">Cancel Button Was Clicked!</string>
    <string name="Yes">Yes</string>
    <string name="LogoutSuccess"> Logout Successful!!</string>
    <string name="LoginSuccess"> Login Successful!!</string>
    <string name="commentWrite"> Write Comment</string>
    <string name="dotdotdot">...</string>


    <string name="forum_title_label">Forum Title</string>
    <string name="forum_description_label">Forum Description</string>
    <string name="new_forum_label">New Forum</string>
    <string name="forums_label">Forums</string>
    <string name="forum_label">Forum</string>

</resources>